--- a/04_Typescript_and_React/src/index.css
+++ b/04_Typescript_and_React/src/index.css
@@ -68,8 +68,8 @@ html {
 
 body {
   background: var(--background-color);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--text-color);
@@ -203,6 +203,9 @@ ul {
 }
 .mb-1 {
   margin-bottom: 1rem;
+}
+.mb-2 {
+  margin-bottom: 2rem;
 }
 main {
   padding: 5rem 0;
